--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,6 @@
 /*
   #eeeff7   - white
-  #d5fbff   - sky blue
+     - sky blue
   #9fbcbf   - light grey
   #647678   - grey
   #2f3738   - dark grey
