--- a/projects/Web-Apps/Drum-machine/css/style.css
+++ b/projects/Web-Apps/Drum-machine/css/style.css
@@ -3,18 +3,18 @@
   padding: 0;
 }
 
-#app{
+#root{
   display: flex;
   height: 100%;
   width:100%;
   justify-content: center;
   align-items: center;
+  background-color:#647678;
 }
 
 #drum-machine{
   display: flex;
   flex-direction: row;
-  background-color: black;
   width: 720px;
   height: 360px;
   margin: auto;
@@ -23,7 +23,7 @@
 #panel{
   display: flex;
   flex-direction: column;
-  background-color:black;
+  background-color:#2f3738;
 }
 
 #display{
@@ -31,14 +31,14 @@
   width:100%;
   height: 100%;
   align-self: center;
-  background-color: black;
+  background-color: #2f3738;
   justify-content: center;
   align-items: center;
 }
 
 #display-box{
-  background-color: white;
-  border: 1px solid grey;
+  background-color: #d5fbff;
+  border: 1px solid #9fbcbf;
   width: 130px;
   height: 20px;
 }
@@ -53,9 +53,9 @@
 .drum-pad{
   height: 100px;
   width: 100px;
-  background-color: pink;
+  background-color: #d5fbff;
   margin: 10px;
-  border: 2px solid grey;
+  border: 2px solid #9fbcbf;
   border-radius: 5px;
 }
 
