--- a/projects/Web-Apps/calculator/css/style.css
+++ b/projects/Web-Apps/calculator/css/style.css
@@ -1,41 +1,57 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
 #root{
   height: 100%;
-  width: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #647678;
+}
+#calculator{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 3px solid black;
+  border-radius: 10px;
+  padding:10px;
+  background-color: #9fbcbf;
+}
+#numberpad{
+  padding: 0;
 }
 
-.container{
-  padding: 0;
-  margin: auto;
-  width: 602px;
-}
-.padButton {
-  width: 100px;
-  height: 100px;
-}
-
-.padCasing {
-  padding: 0;
-  height: 100px;
+.col{
+  padding:0;
 }
 
 #display{
-  width: 100%;
-  height: 100px;
-  font-size: 50px;
-     overflow-x: scroll;
-  border: 1px solid black;
+  height: 10vh;
+  font-size: 8vh;
+  width: 97%;
+  align-items: center;
+  overflow-x:auto;
+  overflow-y: hidden;
+  padding-right: 0;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  background-color: #d5fbff;
+  border: 1px solid #2f3738;
 }
-
 #pad{
-  display: flex;
-  flex-direction: row;
-  border: 1px solid black;
-  border-top: none;
-  max-width: 600px;
- }
-
- .row{
-   display: flex;
-   flex-direction: row;
- }
+  margin: 0;
+}
+#operationPad .row{
+  float:right;
+}
+.padButton{
+  height: 10vh;
+}
+ #root button{
+  background-color: #647678;
+  border: 1px solid #2f3738;
+  margin: 2px;
+}
