--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,8 @@ a:visited{
 
 #root{
   color: #2f3738;
-  height:100%
+  height:100%;
+  padding-top: 56px;
 }
 
 #banner{
@@ -55,4 +56,10 @@ a:visited{
 
 .about-text{
   padding: 10px;
+}
+
+@media (max-width: 576px) {
+  #root{
+    padding-top: 216px;
+  }
 }
