--- a/css/projectsInfo.css
+++ b/css/projectsInfo.css
@@ -1,10 +1,11 @@
 #root{
   font-family: 'Cabin', sans-serif;
-  color
+  color:#2f3738;
+  padding-top:56px;
 }
 
 .teal{
-  background-color: #59d8e6;
+  background-image: url("../images/index.png");
 }
 
 .sky-blue{
@@ -16,8 +17,26 @@
   height: 250px;
   margin: 25px;
 }
+.project-text{
+  padding: 15px;
+  font-size: 20px;
+}
+.section-title{
+  text-align: center;
+  width: 100%;
+  font-size: 40px;
+  padding: 20px;
+  border-top: 3px solid #252c2c;
+  background-color: #647678;
+  border-bottom: 3px solid #252c2c;
+  color: #eeeff7;
+}
 
 @media (max-width: 576px) {
+  #root{
+    padding-top: 216px;
+  }
+
   .media{
     display: flex;
     flex-direction: column;
