--- a/projects/Web-Apps/Random-Quote-Machine/css/style.css
+++ b/projects/Web-Apps/Random-Quote-Machine/css/style.css
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   align-items: center;
+  padding-top:56px;
 }
 button{
   height: 4rem;
@@ -67,4 +68,10 @@ button{
 
 a{
   text-decoration: none;
+}
+
+@media (max-width: 576px) {
+  #root{
+    padding-top: 216px;
+  }
 }
