--- a/projects/Web-Pages/Technical-Documentation-Page/css/style.css
+++ b/projects/Web-Pages/Technical-Documentation-Page/css/style.css
@@ -1,13 +1,17 @@
 html, body{
-  background-color: #f2f2f2;
-    font-family: "Motiva Sans", Sans-serif;
-    margin: 0;
+  background-color: #eeeff7;
+  font-family: "Motiva Sans", Sans-serif;
+  margin: 0;
+  color:#647678;
+}
+
+#root{
+  padding-top: 56px;
 }
 
 #page-container{
   display: flex;
   flex-direction: row;
-  padding-top: 60px;
 }
 #navi header{
   padding: 5% 0;
@@ -16,11 +20,11 @@ html, body{
 #navi{
   position: fixed;
   margin-left: 0;
-  background-color: #f2f2f2;
+  background-color: #9fbcbf;
   height: 100%;
   width: 300px;
   font-size: 24px;
-  border-right: 3px solid black;
+  border-right: 3px solid #2f3738;
   z-index: 0;
 }
 
@@ -30,7 +34,7 @@ html, body{
 }
 
 #navbar li{
-  border-top:1px solid black;
+  border-top:1px solid #2f3738;
   padding: 5% 0;
   margin: 1px 0;
   list-style: none;
@@ -42,7 +46,7 @@ html, body{
 }
 
 #navbar a:hover{
-  color: black;
+  color: #2f3738;
 }
 
 #documentation{
@@ -72,36 +76,17 @@ code{
 
 @media only screen and (max-width: 1020px){
   #navi{
-    width: 100%;
-    height: 90px;
-  }
-
-  #navbar{
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-  }
-
-  #navbar header{
-    padding: 10px 0;
+    visibility: hidden;
   }
 
   #documentation{
-    margin-top: 90px;
     margin-left: 0;
   }
 
-  #navbar li{
-    border-top: 0;
-    font-size: 18px;
-    margin: 0;
-    padding: 0;
-  }
-  #navbar ul{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin: 1% 0;
-    justify-content: space-between;
+}
+
+@media (max-width: 576px) {
+  #root{
+    padding-top: 216px;
   }
 }
